--- a/RestaurantApplication/Restaurant.Web/Views/Coupon/CouponIndex.cshtml
+++ b/RestaurantApplication/Restaurant.Web/Views/Coupon/CouponIndex.cshtml
@@ -38,7 +38,11 @@
 					<td>@item.CouponCode</td>
 					<td>@((item.DiscountAmount).ToString("c"))</td>
 					<td>@((item.MinAmount).ToString("c"))</td>
-					<td><a class="btn btn-danger"><i class="bi bi-trash"></i></a></td>
+					<td>
+						<a asp-action="CouponDelete" asp-route-couponId="@item.CouponId" class="btn btn-danger">
+							<i class="bi bi-trash"></i>
+						</a>
+					</td>
 				</tr>
 				}
 			</tbody>
